[package]
name = "rust_json_parser"
version = "1.0.1"
edition = "2021"
authors = ["Anshul <anshulspartan141@gmail.com>"]
description = "JSON parser for Node js based frameworks"
license = "MIT OR Apache-2.0"

[lib]
name = "mylib"
crate-type = ["cdylib"]


[dependencies]
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
